# bmt-gate-sandbox

./: .canary-bmt-pr-test-20260305  .canary-bmt-test-20260305  .cursorignore  .cursorindexingignore  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.example  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Justfile  README.md  ROADMAP.md  SECURITY.md  accepted.txt  core-main-workflow.yml  legacy-workflow.yml  original_build-and-test.yml  pr_comment_draft.md  pyproject.toml  pyrightconfig.json  ruff.toml  scratch.py
.github/bmt/: CI_CHECK_BMT_GATE_UPDATE.md  README.md  pyproject.toml
.github/bmt/bmt/: __init__.py  driver.py
.github/bmt/bmt/commands/: matrix.py  trigger.py  upload_runner.py  vm.py
.github/bmt/ci/: __init__.py  bmt_constants.py  cloud_run_api.py  config.py  core.py  driver.py  gcs.py  github.py  handoff.py  handoff_dataset.py  handoff_env.py  handoff_summary.py  handshake.py  matrix.py  preset.py  runner.py  trigger.py  vm.py  workflow_dispatch.py  workflow_env.py  workflows_api.py
.github/bmt/cli/: README.md  __init__.py  driver.py  gcs.py  gh_output.py  github_api.py
.github/bmt/cli/commands/: ci_workflow.py  job.py  load_env.py  matrix.py  trigger.py  upload_runner.py  vm.py  workflow.py  workflow_trigger.py
.github/bmt/cli/resources/: __init__.py  startup_entrypoint.sh
.github/bmt/cli/shared/: __init__.py  config.py  defaults.py
.github/bmt/config/: .env.dev  .env.example  .env.prod  README.md  bootstrap_gh_vars.sh
.github/bmt/scripts/: bmt_workflow.sh  ci_workflow.sh
.github/bmt/scripts/cmd/: context.sh  failure.sh  handshake.sh  summary.sh  trigger.sh  upload.sh
backend/: .dockerignore  Dockerfile  __init__.py  path_utils.py  pyproject.toml  root_orchestrator.py  vm_watcher.py
backend/config/: bmt_config.py  bmt_domain_status.py  constants.py  status.py
backend/github/: github_auth.py  github_checks.py  github_pr_comment.py  github_pull_request.py  presentation.py  reporting.py  status_file.py  statuses.py
backend/projects/shared/: bmt_manager_base.py
backend/projects/sk/: bmt_manager.py
backend/projects/skyworth/: bmt_manager.py
backend/runtime/: __init__.py  artifacts.py  entrypoint.py  execution.py  facade.py  github_reporting.py  kardome_batch_results.py  legacy_kardome.py  models.py  planning.py  plugin_publisher.py  stage_paths.py
backend/runtime/sdk/: __init__.py  compatibility.py  context.py  kardome_runner_json.py  manifest_build.py  plugin.py  protocols.py
backend/schemas/: README.md  bmt_root_results.schema.json  ci_verdict.schema.json  current_pointer.schema.json  latest_result.schema.json  manager_summary.schema.json
backend/scripts/: README.md  audit_vm_and_bucket.py  bmt-watcher.service.example  create_bmt_green_vm.py  cutover_bmt_vm.py  export_vm_spec.py  install_deps.py  rollback_bmt_vm.py  rollback_startup_to_inline.py  run_watcher.py  set_startup_script_url.py  ssh_install.py  startup_entrypoint.sh
backend/src/backend/: main.py
backend/src/backend/config/: bmt_domain_status.py  constants.py  decisions.py  value_types.py
backend/src/backend/github/: client.py  github_auth.py  github_checks.py  presentation.py  reporting.py  statuses.py
backend/src/backend/runtime/: artifacts.py  entrypoint.py  execution.py  finalization.py  github_reporting.py  hsm.py  kardome_batch_results.py  legacy_kardome.py  models.py  planning.py  (+4 more)
backend/src/bmtplugin/: __init__.py
ci/: README.md  pyproject.toml
ci/config/: README.md
ci/kardome_bmt/: __init__.py  actions.py  bmt_constants.py  capability.py  config.py  core.py  driver.py  gcs.py  github.py  handoff.py  handoff_dataset.py  handoff_env.py  handoff_summary.py  matrix.py  matrix_ci_snapshot_bmt_gcloud.py  matrix_core_main.py  preset.py  release_cli.py  release_marker.py  runner.py  runner_provenance.py  workflow_dispatch.py  workflow_env.py  workflows_api.py
ci/src/bmt_gate/: __init__.py  _constants.py  bmt_config.py  cloud_run_api.py  config.py  core.py  driver.py  handoff.py  handoff_dataset.py  handoff_env.py  handoff_summary.py  handshake.py  matrix.py  preset.py  runner.py  runner_provenance.py  trigger.py  vm.py  workflow_dispatch.py  workflow_env.py  workflows_api.py
ci/src/bmtgate/: __init__.py  core.py  main.py  settings.py
contracts/: pyproject.toml
contracts/src/bmtcontract/: __init__.py  constants.py  decisions.py  models.py  paths.py
gcp/code/: __init__.py  pyproject.toml  root_orchestrator.py  utils.py  vm_watcher.py
gcp/code/bootstrap/: README.md  build_bmt_image.sh  create_bmt_green_vm.sh  ensure_uv.sh  install_deps.sh  setup_vm_startup.sh  ssh_install.sh  startup_example.sh  startup_wrapper.sh
gcp/code/config/: bmt_config.py  constants.py
gcp/code/github/: __init__.py  github_auth.py  github_checks.py  github_pr_comment.py  github_pull_request.py
gcp/code/lib/: github_auth.py  github_checks.py  github_pr_comment.py
gcp/code/skyworth/: bmt_manager.py
gcp/code/vm/: README.md  audit_vm_and_bucket.sh  bmt-watcher.service.example  build_bmt_image.sh  create_bmt_green_vm.sh  cutover_bmt_vm.sh  export_vm_spec.sh  install_deps.sh  rollback_bmt_vm.sh  rollback_startup_to_inline.sh  run_watcher.sh  set_startup_script_url.sh  shared.sh  ssh_install.sh  startup_entrypoint.sh  vm_deps.txt
runtime/: Dockerfile  __init__.py  artifacts.py  entrypoint.py  execution.py  facade.py  gcp_console_links.py  github_reporting.py  kardome.py  kardome_batch_results.py  kardome_case_metrics.py  kardome_runparams.py  legacy_kardome.py  main.py  models.py  planning.py  plugin_loader.py  plugin_publisher.py  pyproject.toml
runtime/assets/: sk_kardome_input_template.json
runtime/config/: __init__.py  constants.py  decisions.py  env_parse.py  status.py
runtime/github/: duration_format.py  github_auth.py  github_checks.py  presentation.py  reporting.py  statuses.py
runtime/schemas/: README.md  krdm_bmt_case_metrics_v1.schema.json  krdm_runner_execution_results_v1.schema.json
runtime/schemas/examples/: sk_sanity_tests_case.bmt.json.example
(+1009 files in other folders)
