# ------------------------------------------------------------------------------
# bmt-gcloud — workspace root pyproject (PEP 621 + tool tables)
# ------------------------------------------------------------------------------
#
# Stack
#   GCP + GitHub: storage, Artifact Registry, githubkit; Pydantic for config.
#   Dist: kardome-bmt-runtime (backend/), kardome-bmt-gate (ci/).
#   tools/: Typer + Rich CLIs.
#
# Toolchain
#   uv — lockfile, .venv, workspace members + editable [tool.uv.sources].
#   Hatchling — wheel with repo tooling only; runtime/CI ship from their workspace packages.
#   Ruff (ruff.toml); ty + pytest (below); prek via uv run prek (hooks).
#
# Deps
#   [project.dependencies] = runtime. dependency-groups dev + infra default on
#   uv sync; use uv sync --no-group infra to drop Pulumi Python SDK only.
#
# Ref: https://docs.astral.sh/uv/concepts/projects/workspaces/
# ------------------------------------------------------------------------------

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "bmt-gcloud"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "kardome-bmt-contract",
    "kardome-bmt-gate",
    "kardome-bmt-runtime",
    "google-cloud-artifact-registry>=1.14.0",
    "google-cloud-storage>=2.16",
    "orjson>=3.10",
    "prek>=0.3.5",
    "pydantic>=2.12.5",
    "rich>=13.0",
    "typer>=0.15.0",
    "whenever>=0.9.5",
    "githubkit>=0.15.1",
]

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[tool.uv.sources]
kardome-bmt-contract = { workspace = true }
kardome-bmt-gate = { workspace = true }
kardome-bmt-runtime = { workspace = true }
bmt-gcloud = { workspace = true }

[tool.uv.workspace]
members = ["contracts", "ci", "backend"]

[tool.uv]
package = true
default-groups = ["dev", "infra"]

[tool.ty.environment]
python-version = "3.12"
extra-paths = [
    "contracts/src",
    "backend/src",
    "ci",
    "benchmarks/projects/sk/src",
]

[tool.ty.src]
exclude = [
    "data",
    "sk_runtime",
    "local_batch",
    "secrets",
    "benchmarks",
]

[dependency-groups]
dev = [
    "google-auth-stubs>=0.3.0",
    "pylint>=3.3.0",
    "pytest>=9.0.2",
    "pytest-github-actions-annotate-failures>=0.4.0",
    "pytest-instafail>=0.5.0",
    "pytest-mock>=3.15.1",
    "pytest-randomly>=4.0.1",
    "pytest-rerunfailures>=16.1",
    "pytest-socket>=0.7.0",
    "pytest-subprocess>=1.5.3",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.6",
    "ty>=0.0.1",
    "vulture>=2.11",
]
infra = [
    "pulumi>=3.226.0",
    "pulumi-gcp>=9.15.0",
]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
addopts = [
    "--strict",
    "-ra",
    "--timeout-method=thread",
    "--import-mode=importlib",
    "--disable-socket",
    "--allow-unix-socket",
    "--instafail",
]
xfail_strict = true
filterwarnings = [
    "error::ResourceWarning",
]
markers = [
    "unit: pure logic tests without subprocess/network/filesystem coupling",
    "contract: deterministic behavior tests for CLI command contracts using fakes/mocks",
    "integration: subprocess/filesystem orchestration tests with local fakes",
    "bmt_plugin_load: load published BMT plugins from committed benchmarks (import side effects)",
]
