[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bmt-runtime"
version = "0.1.0"
# Match workspace root so runtime and tooling stay on Python 3.12.
requires-python = ">=3.12,<3.13"
dependencies = [
  "google-cloud-secret-manager>=2.23",
  "google-cloud-storage>=2.16",
  "PyGithub>=2.0",
  "PyJWT>=2.0",
  "cryptography>=41.0",
  "pydantic>=2.12.5",
  "typer>=0.12",
  "whenever>=0.9.5",
]

[tool.uv]
package = true

# Workspace member: run with uv run --package bmt-runtime from repo root.
# Dev tooling (tests, lint) runs from workspace root; no dev group needed here unless this package is developed in isolation.
[dependency-groups]
dev = []

[tool.setuptools.packages.find]
where = ["."]
include = ["gcp.image*", "gcp.image.runtime*", "gcp.image.github*", "gcp.image.config*"]
