[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "kardome-bmt-runtime"
version = "0.1.0"
description = "Kardome BMT cloud job/orchestrator runtime (Python code baked into the VM image)."
# Match workspace root so runtime and tooling stay on Python 3.12.
requires-python = ">=3.12,<3.13"
dependencies = [
  "google-cloud-secret-manager>=2.23",
  "google-cloud-storage>=2.16",
  "PyGithub>=2.0",
  "PyJWT>=2.0",
  "cryptography>=41.0",
  "pydantic>=2.12.5",
  "typer>=0.12",
  "whenever>=0.9.5",
]

[tool.uv]
package = true

# Workspace member: uv run --package kardome-bmt-runtime … (import package remains backend.*).
# Dev tooling (tests, lint) runs from workspace root; no dev group needed here unless this package is developed in isolation.
[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = [
  "src/backend",
  "src/bmtplugin",
]

[tool.hatch.build.targets.sdist]
include = [
  "src/backend",
  "src/bmtplugin",
  "pyproject.toml",
]
