[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kardome-bmt"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
description = "Kardome BMT CI driver: matrix discovery, Cloud Run handoff, and runner upload."
dependencies = [
    "bmt-gcloud",
    "google-cloud-compute>=1.45",
    "google-cloud-storage>=2.16",
    "PyGithub>=2.0",
    "pydantic>=2.12.5",
    "typer>=0.15.0",
]

[tool.uv]
package = true

[project.scripts]
kardome-bmt = "kardome_bmt.driver:main"
kardome-bmt-matrix = "kardome_bmt.driver:main_matrix"
kardome-bmt-write-context = "kardome_bmt.driver:main_write_context"
kardome-bmt-write-summary = "kardome_bmt.driver:main_write_handoff_summary"

[tool.setuptools.packages.find]
where = ["."]
include = ["kardome_bmt*"]
