[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bmt-runtime"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "bmt-sdk",
  "google-cloud-secret-manager>=2.23",
  "google-cloud-storage>=2.16",
  "PyGithub>=2.0",
  "PyJWT>=2.0",
  "cryptography>=41.0",
  "pydantic>=2.12.5",
  "typer>=0.12",
  "whenever>=0.9.5",
]

[tool.uv]
package = true

[dependency-groups]
dev = []

[tool.setuptools.packages.find]
where = [".."]
include = ["runtime*"]
