[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

# Portable: copy this directory into a repo's .github/ (e.g. .github/bmt/). Run uv sync from repo root
# or from this directory; the bmt script will be available.
# bmt-gcloud: in a workspace with a root named bmt-gcloud it is resolved from the root; otherwise
# install from PyPI or set tool.uv.sources in the enclosing project.
[tool.uv.build-backend]
module-name = "ci"
module-root = ""

[project]
name = "bmt"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
description = "BMT CI driver: matrix discovery, trigger handoff, and runner upload."
dependencies = [
    "bmt-gcloud",
    "google-cloud-compute>=1.45",
    "google-cloud-pubsub>=2.21",
    "google-cloud-storage>=2.16",
    "PyGithub>=2.0",
    "pydantic>=2.12.5",
]

# Optional: uv sync --group dev (when developing this package in isolation)
[dependency-groups]
dev = [
    "basedpyright",
    "ruff>=0.15.0",
]

# Main entrypoint; shorthands so you can run e.g. `uv run bmt-matrix` instead of `uv run bmt matrix`.
[project.scripts]
bmt = "ci.driver:main"
bmt-matrix = "ci.driver:main_matrix"
bmt-trigger = "ci.driver:main_write_run_trigger"
bmt-write-context = "ci.driver:main_write_context"
bmt-write-summary = "ci.driver:main_write_handoff_summary"

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [".venv", "__pycache__", ".ruff_cache"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.basedpyright]
typeCheckingMode = "basic"
pythonVersion = "3.12"
reportMissingTypeStubs = false
