[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

# Portable: copy this directory into a repo's .github/ (e.g. .github/bmt/). Run uv sync from repo root
# or from this directory; the bmt script will be available.
# bmt-gcloud: in a workspace with a root named bmt-gcloud it is resolved from the root; otherwise
# install from PyPI or set tool.uv.sources in the enclosing project.
[tool.uv.build-backend]
module-name = "ci"
module-root = ""

[project]
name = "bmt"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
description = "BMT CI driver: matrix discovery, Cloud Run handoff, and runner upload."
dependencies = [
    "bmt-gcloud",
    "google-cloud-compute>=1.45",
    "google-cloud-storage>=2.16",
    "PyGithub>=2.0",
    "pydantic>=2.12.5",
    "typer>=0.15.0",
]

# Optional: uv sync from repo root (dev group included by default; use --no-dev to exclude)
[dependency-groups]
dev = [
    "ruff>=0.15.0",
]

# Main entrypoint; shorthands map to the same Typer commands as `uv run bmt matrix build`, etc.
[project.scripts]
bmt = "ci.driver:main"
bmt-matrix = "ci.driver:main_matrix"
bmt-write-context = "ci.driver:main_write_context"
bmt-write-summary = "ci.driver:main_write_handoff_summary"

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [".venv", "__pycache__", ".ruff_cache"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
